# internal/user/dto/user.go
@@ -39,19 +39,39 @@ type RefreshTokenRes struct {
 	AccessToken string `json:"access_token"`
 }
 
-type ChangePasswordReq struct {
+type UpdateUserReq struct {
 	Password    string `json:"password" validate:"required,password"`
 	NewPassword string `json:"new_password" validate:"required,password"`
 }
 
-//***************************************************************************\\
-//***************************************************************************\\
-
-type VerifyRequest struct {
-	Email      string `json:"email"`
-	VerifyCode string `json:"verify_code"`
+type UpdateUserRes struct {
+	Message string `json:"message"`
 }
 
+//***************************************************************************\\
+//***************************************************************************\\
+
+type VerifyPhoneNumberRequest struct {
+	PhoneNumber           string `json:"phone_number"`
+	VerifyCodePhoneNumber string `json:"verify_code_phone_number"`
+}
+type ResendVerifyPhoneNumberRequest struct {
+	PhoneNumber string `json:"phone_number"`
+}
+
+// ***************************************************************************\\
+type VerifyEmailRequest struct {
+	Email           string `json:"email"`
+	VerifyCodeEmail string `json:"verify_code_email"`
+}
+type ResendVerifyEmailRequest struct {
+	Email string `json:"email"`
+}
+
+// ***************************************************************************\\
 type VerifyResponse struct {
 	Message string `json:"message"`
 }
+
+//***************************************************************************\\
+//***************************************************************************\\
